@@ -60,9 +60,9 @@ foreach ($cids as $source => $cid)
         // Check if contact exists, if so, we'll need it's ID
         // Note: Some addressbooks allows empty email address field
         if (!empty($a_record['email']))
-            $result = $TARGET->search('email', $a_record['email'], true, true, true);
+            $result = $TARGET->search('email', $a_record['email'], 1, true, true);
         else if (!empty($a_record['name']))
-            $result = $TARGET->search('name', $a_record['name'], true, true, true);
+            $result = $TARGET->search('name', $a_record['name'], 1, true, true);
         else
             $result = new rcube_result_set();
 
